feat(new_release: 6.0)